Fix hundreds of tests